# lenlab_mspm0

./: .gitignore  README.md  app.py  dev_readme.md  profile.py  pyproject.toml
.github/workflows/: pytest.yml
firmware/: .ccsproject  .cproject
lenlab/: __init__.py  app.py  banner.py  bode.py  bsl.py  figure.py  launchpad.py  lenlab.py  manager.py  message.py  messages.py  micro.py  oscilloscope.py  programmer.py  signal.py  symbols.py  translator.py  voltmeter.py  window.py
notes/: adc.md  bookmarks.md  dac.ipynb  dac.md  dac_sin_calc.ipynb  datasheet.md  deployment.md  lenlab.md  linux_setup.py  modem_manager.py  protocol.md  sleep.md  translation.md  trigger.ipynb  udev_rule.md  version.md
src/lenlab/: __main__.py  app.py  banner.py  bsl.py  cli.py  discovery.py  flash.py  language.py  launchpad.py  lenlab.py  loop.py  lp_plugin.py  memory.py  message.py  practice.py  profile.py  programmer.py  protocol.py  queued.py  scripts.py  singleshot.py  spy.py  sys_info.py  terminal.py  vocabulary.py  window.py
src/lenlab/app/: about.py  (+20 more)
tests/: conftest.py  test_app.py  test_box.py  test_bsl.py  test_cli.py  test_comm.py  test_discovery.py  test_figure.py  test_firmware.py  test_launchpad.py  test_lenlab.py  test_linux.py  test_main.py  test_manager.py  test_message.py  test_port_info.py  test_probing.py  test_protocol.py  test_rx.py  test_startup.py  test_sync_terminal.py  test_sys_info.py  test_terminal.py  test_v_controller.py  test_version.py  test_vocabulary.py  test_voltmeter.py
tests/app/: test_bode.py  test_figure.py  test_oscilloscope.py  test_poster.py  test_programmer.py  test_save_as.py  test_voltmeter.py  test_window.py
tests/controller/: test_auto_save.py  test_csv.py  test_lenlab.py  test_report.py
tests/firmware/: test_protocol.py  test_signal.py
tests/gui/: test_main.py  test_status.py  test_window.py
tests/launchpad/: test_protocol.py
tests/model/: test_points.py  test_waveform.py
workspace/: .gitignore
workspace/cmd_rpl_experiment/: .ccsproject  .cproject  .project  cmd_rpl.py  main.c  main.syscfg
workspace/comm_experiment/: .cproject  .project  comm.py  (+1 more)
(+103 files in other folders)
