[project]
name = "lenlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "pyside6>=6.8.0.2",
    "pytest-repeat>=0.9.3",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling>=1.12.0,<2"]
build-backend = "hatchling.build"

[project.scripts]
lenlab = "lenlab.cli:main"

[project.entry-points.pytest11]
lp_plugin = "lenlab.tests.lp_plugin"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]
