[project]
name = "lenlab"
version = "8.0b0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pyside6>=6.8.0.2",
]

[project.scripts]
lenlab = "lenlab.cli:main"

[dependency-groups]
dev = [
    "pytest-repeat>=0.9.3",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling>=1.12.0,<2"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]
